# wod2sim

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  THIRD_PARTY_NOTICES.md  paper.bib  paper.tex  pyproject.toml  wod_alpasim_2026.sty  wodalpasimabbrvnat.bst
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_NOTICES.md
artifacts/cvm/inputs/: README.md  diagnostic_protocol_sessions.jsonl
artifacts/cvm/manifests/: experiment_matrix.yaml  scene_manifest.yaml
artifacts/cvm/reports/: baseline_report.md  blockers.md  claim_evidence_matrix.md  contract_test_audit.md  experiment_report.md  reference_audit.md  release_decision.md  repository_inventory.md  submission_checklist.md  test_report.md
artifacts/cvm/results/: closed_loop_metrics.csv  diagnostic_experiment.json  diagnostic_experiment_cases.csv  failures.csv  fault_injection.csv  frames.csv  runs.csv  semantic_ablation_pairs.csv  summary.csv  summary.json
artifacts/cvm/tables/: ablations.tex  contract_map.tex  fault_localization.tex  main_results.tex  paper_numbers.tex  protocol_replay_policies.tex  waymax_factorial.tex
artifacts/sii2027/environment/: git_state.txt  python_packages.txt  simulator_state.txt  system.txt
artifacts/sii2027/reports/: baseline_report.md  blockers.md  claim_evidence_matrix.md  contract_test_audit.md  experiment_report.md  repository_inventory.md  submission_checklist.md  test_report.md
artifacts/sii2027/results/: failures.csv  runs.csv  summary.csv  summary.json
artifacts/sii2027/tables/: fault_localization.tex  main_results.tex
configs/cvm/: core.yaml  fault_injection.yaml  lifecycle_stress.yaml  semantic_ablation.yaml  temporal_ablation.yaml
docs/: README.md  benchmark_evidence_workflow.md  benchmark_regeneration_handoff.md  challenge-compatibility.md  changelog.md  cli.md  cli_reference.md  closed_loop_reproduction.md  conformance.md  design.md  evaluation.md  evaluation_protocol.md  getting-started.md  integration_guide.md  readme_media.md  reproduction.md  waymo_motion_and_alpasim.md  waymo_readiness.md  womd-targeting.md
docs/assets/readme/: README.md
docs/evidence/: benchmark_operator_matrix_20260706.json  benchmark_public_evidence_manifest_20260706.json  benchmark_regeneration_audit_20260706.json  benchmark_regeneration_commands_20260706.json  benchmark_regeneration_plan_20260706.json  benchmark_regeneration_readiness_20260706.json  benchmark_regeneration_resume_commands_20260706.json  benchmark_regeneration_status_20260706.json  closed_loop_spotlight_reflex_one_scene.json
integrations/alpasim_e2e_challenge/: Dockerfile  README.md  build_image.sh  run_local_container.sh
paper/: Makefile  README.md  paper.tex
paper/cvm/: CHANGELOG.md  REPRODUCE.md  main.tex  metadata.json  references.bib
paper/sii2027/: CHANGELOG.md  REPRODUCE.md  main.tex  references.bib
scripts/: aggregate_cvm.py  aggregate_sii2027.py  audit_alpasignal_bridge.py  audit_run.py  benchmark_operator_matrix.py  benchmark_regeneration_plan.py  bootstrap_alpasim_env.sh  build_alpasim_oracle_actor_proxy.py  build_cvm_paper.sh  build_sii2027_paper.sh  challenge_e2e_driver.py  check_alpasim_readiness.py  cvm_inventory.sh  generate_alpasim_replay_video.py  generate_cvm_figures.py  generate_sii2027_figures.py  import_alpasim_scene_cache.sh  package_alpasim_navsim_reactive_evidence.py  prepare_alpasim_public_video_fixture.py  release_bootstrap_smoke.py  reproduce_closed_loop.py  run_alpasim_local_external.py  run_alpasim_replay_client.py  run_alpasim_replay_demo.sh  run_alpasim_scene_batch.py  run_cvm_matrix.py  run_diagnostic_experiment.py  run_sii2027_matrix.py  run_synthetic_contract_demo.py  run_waymax_contract_study.sh  serve_alpasim_seed_video_model.py  setup_alpasim_local_plugin.py  sii2027_inventory.sh  support_bundle.py  validate_cvm_submission.py  validate_sii2027_submission.py  wod2sim_doctor.py
src/alpabridge/audit/: diagnostic_experiment.py  diagnostic_trace_generation.py  trace_diagnostics.py
src/alpabridge/experiments/: __init__.py  waymax_contract_study.py
src/wod2sim/: __init__.py
src/wod2sim/alpasim_overrides/: Dockerfile.amd64  README.md  __init__.py  local_checkout.patch  route_waypoints.patch
src/wod2sim/audit/: __init__.py  alpasim_export.py  diagnostic_experiment.py  diagnostic_trace_generation.py  internal_export.py  rerun_bridge.py  review.py  schema.py  trace_diagnostics.py
src/wod2sim/challenge/: __init__.py  e2e_driver.py
src/wod2sim/cli/: README.md  __init__.py  runtime_paths.py  wrapper.py
src/wod2sim/experiments/: __init__.py  waymax_contract_study.py
src/wod2sim/model/: README.md  __init__.py  anchor_trajectory_model.py  internvla_av_bridge.py  kinematic_candidates.py  learned_trajectory_model.py  neural_planner.py  (+16 more)
tests/: test_aggregate_cvm.py  test_alpasim_integration.py  test_alpasim_navsim_reactive_evidence.py  test_alpasim_setup_scripts.py  test_alpasim_spotlight_legality.py  test_audit_run_command.py  test_batch_summary.py  test_benchmark_operator_matrix.py  test_benchmark_public_evidence_manifest.py  test_benchmark_regeneration_audit.py  test_benchmark_regeneration_commands.py  test_benchmark_regeneration_plan.py  test_benchmark_regeneration_readiness.py  test_benchmark_regeneration_status.py  test_bootstrap_alpasim_env_script.py  test_build_alpasim_local_usdz_cache.py  test_challenge_e2e_driver.py  test_check_alpasim_readiness.py  test_import_alpasim_scene_cache_script.py  test_navsim_ego_status_mlp.py  test_plugin_dependency_boundary.py  test_release_bootstrap_smoke.py  test_reproduce_closed_loop.py  test_run_alpasim_scene_batch.py  test_run_cvm_matrix.py  test_run_sii2027_matrix.py  test_spotlight_reflex.py  test_support_bundle_command.py  test_synthetic_contract_demo.py  test_trace_diagnostics.py  test_validate_cvm_submission.py  test_validate_sii2027_submission.py  test_waymax_contract_study.py  test_wod2sim_doctor.py  test_wod_scenarios.py
(+438 files in other folders)
