[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wod2sim"
version = "0.1.0"
description = "Standalone code and paper release for adapting WOD-style driving policies to AlpaSim closed-loop execution"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE", "LICENSES/*"]
dependencies = [
    "numpy>=1.26",
    "PyYAML>=6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pre-commit>=3.7",
    "pytest>=7.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
alpasim = [
    "huggingface_hub>=0.30",
    "pyarrow>=16",
]
viz = ["Pillow>=10"]

[project.entry-points."alpasim.models"]
constant_velocity = "wod2sim.simulator.baseline_drivers:ConstantVelocityAlpaSimModel"
route_following = "wod2sim.simulator.baseline_drivers:RouteFollowingAlpaSimModel"
token_dagger_bc = "wod2sim.simulator.alpasim_token_bc:TokenBCAlpaSimModel"
direct_actor_planner = "wod2sim.simulator.alpasim_direct_actor_planner:DirectActorPlannerAlpaSimModel"

[project.entry-points."alpasim.configs"]
wod2sim = "wod2sim.simulator.alpasim_configs"

[project.scripts]
wod2sim-doctor = "wod2sim.cli.commands.wod2sim_doctor:main"
wod2sim-setup = "wod2sim.cli.commands.setup_alpasim_local_plugin:main"
wod2sim-ready = "wod2sim.cli.commands.check_alpasim_readiness:main"
wod2sim-launch = "wod2sim.cli.commands.run_alpasim_local_external:main"
wod2sim-batch = "wod2sim.cli.commands.run_alpasim_scene_batch:main"
wod2sim-build-local-cache = "wod2sim.cli.commands.build_alpasim_local_usdz_cache:main"
wod2sim-build-oracle-proxy = "wod2sim.cli.commands.build_alpasim_oracle_actor_proxy:main"
wod2sim-audit-run = "wod2sim.cli.commands.audit_run:main"
wod2sim-support-bundle = "wod2sim.cli.commands.support_bundle:main"
wod2sim-reproduce = "wod2sim.cli.commands.reproduce_closed_loop:main"
wod2sim-promote-batch-summary = "wod2sim.cli.commands.promote_batch_summary:main"
wod2sim-benchmark-summary = "wod2sim.cli.commands.benchmark_summary:main"
wod2sim-batch-summary = "wod2sim.cli.commands.batch_summary:main"
wod2sim-benchmark-readiness = "wod2sim.cli.commands.benchmark_readiness:main"
wod2sim-evidence = "wod2sim.neutral.alpasim_metrics:main"

[project.urls]
Homepage = "https://github.com/amtellezfernandez/WOD2Sim"
Repository = "https://github.com/amtellezfernandez/WOD2Sim"
Issues = "https://github.com/amtellezfernandez/WOD2Sim/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wod2sim.simulator.alpasim_configs" = ["**/*.yaml"]
"wod2sim.simulator" = ["alpasim_scene_presets/*.yaml"]
"wod2sim.alpasim_overrides" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "temporal: temporal contract tests selected by the CVM release gate",
]

[tool.coverage.run]
branch = true
source = ["wod2sim"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 33

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]
